# Big_data_to_do_list

./: .coverage  .env  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  linting.yml  test.yml
database/: .env  database_cursor.py
docs/source/: conf.py  config.rst  index.rst  services.rst  utils.rst
src/: __init__.py  accueil.py  index.py  test.py
src/config/: __init__.py  database_cursor.py
src/models/: __init__.py  model_sample.py  task.py  task_list.py  user.py  user_list.py
src/pages/: Modifier_le_profil.py  New_account.py  Nouveau_compte.py  Taches.py  Tâches.py  tasks.py  update_user.py
src/services/: __init__.py  services_sample.py  task_service.py  user_services.py
src/tests/: __init__.py  test_sample.py  test_task.py  test_task_list.py  test_user.py  test_user_services.py
src/utils/: __init__.py  exceptions.py  logger.py  st_utils.py
tests/: test_task.py  test_task_list.py
