[tool.poetry]
name = "to-do-list-fal-cay"
version = "0.1.0"
description = ""
authors = ["cyeo-23, HassaneFalmata"]
readme = "README.md"
packages = [{include = "to_do_list_fal_cay"}]

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.1.1"
htbuilder = "^0.6.2"
streamlit = "^1.27.2"
jwt = "^1.3.1"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pytest-randomly = "^3.7.0"
flake8-docstrings = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
